--- a/index.html
+++ b/index.html
@@ -36,55 +36,20 @@
       content="https://kisyovdent.com/assets/social-preview.png"
     />
 
-    <!-- Primary favicon (maximum compatibility) -->
-    <link rel="icon" href="/assets/favicons/favicon.ico" sizes="any" />
-
-    <!-- Standard PNG favicons -->
     <link
       rel="icon"
       type="image/png"
-      sizes="16x16"
-      href="/assets/favicons/favicon-16x16.png"
+      href="/assets/favicon/favicon-96x96.png"
+      sizes="96x96"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/favicons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-      href="/assets/favicons/favicon-48x48.png"
-    />
-
-    <!-- Apple Touch Icon -->
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/favicons/apple-touch-icon.png"
+      href="/assets/favicon/apple-touch-icon.png"
     />
-
-    <!-- Android / Chrome -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="/assets/favicons/android-chrome-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="/assets/favicons/android-chrome-512x512.png"
-    />
-
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="/assets/favicons/site.webmanifest" />
-
-    <!-- Theme color (important for Chrome mobile + SERP consistency) -->
-    <meta name="theme-color" content="#111417" />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
     <link rel="stylesheet" href="./styles.css" />
 
